<resources>
    <string name="app_name">Instagramy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="google_maps_key">AIzaSyC2S1x3znJvjKcmz0tGe5RS9EVriBfakps</string>

    <string name="menu_home">Home</string>
    <string name="menu_temp1">Temp1</string>
    <string name="menu_temp2">Temp2</string>
    <string name="menu_temp3">Temp3</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_favorites">favorites</string>
    <string name="menu_map">Map</string>
    <string name="menu_my_posts">My Posts</string>

    <string name="menu_admin_settings">Admin Panel</string>
    <string name="menu_logout">Logout</string>


    <string name="title">Title</string>
    <string name="description">Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="my_posts">My Posts</string>
    <string name="manches">Manches</string>
    <string name="logout">Logout</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="edit_profile">Edit profile</string>
    <string name="refresh">Refresh</string>
    <string name="delete_message">are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete_post">Delete Post</string>

</resources>
