<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_add_post_btn"
        android:title="@string/take_a_photo"
        android:icon="@drawable/ic_menu_camera"
        app:showAsAction="collapseActionView|ifRoom"
        />

    <item android:id="@+id/menu_edit_profile_btn"
        android:title="@string/edit_profile"
        android:icon="@drawable/ic_account_circle"
        app:showAsAction="collapseActionView|never"
        />

    <item android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_logout_sign"
        app:showAsAction="collapseActionView|never"
        />
    <item android:id="@+id/menu_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="collapseActionView|never"
        />
</menu>