<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_user_secret_solid"
            android:title="My Posts"
            />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_svgrepo_com"
            android:title="Manches"
            />
        <item
            android:id="@+id/nav_home"

            android:title="@string/menu_home"
            android:icon="@drawable/ic_instagramy_logo" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/menu_map"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>
</menu>
